samples/_failures_safe/1761176836_7a57c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c07c63f.c: In function ‘tokenize_input’:
./samples/SAFE/__tmp_9c07c63f.c:156:5: error: expected expression at end of input
  156 |     while (count <
      |     ^~~~~
./samples/SAFE/__tmp_9c07c63f.c:156:5: error: expected declaration or statement at end of input
